:sparkles: feat: Add authentication classes, migrations and teacher classes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
-spring.datasource.url=jdbc:postgresql://aws-0-sa-east-1.pooler.supabase.com:6543/postgres
-spring.datasource.username=postgres.mouorwiebruzgshrzpht
+spring.datasource.url=jdbc:postgresql://aws-0-sa-east-1.pooler.supabase.com:5432/postgres
+spring.datasource.username=postgres.mqnhrqnvocwcmhvqgfox
 spring.datasource.password=tht1299!@s2
+
+api.security.token.service=${JWT_SECRET}
+api.security.refresh.token.expiration=30
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
