--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:postgresql://aws-0-sa-east-1.pooler.supabase.com:5432/postgres
-spring.datasource.username=postgres.mqnhrqnvocwcmhvqgfox
-spring.datasource.password=tht1299!@s2
+
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/postgres}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 api.security.token.service=${JWT_SECRET}
 api.security.refresh.token.expiration=30
@@ -9,3 +10,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
+mailgun,aou
