--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/postgres}
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 
@@ -10,4 +9,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
-mailgun,aou
+mailgun.api.key=${MAILGUN_API_KEY}
+mailgun.domain=${MAIL_DOMAIN}
+mailgun.sender=${MAIL_SENDER}
+
+api.url=${BACK-URL}
+front.url=${FRONT_URL}
